fix: prevent article width from running amok on mobile

--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -17,6 +17,9 @@ main
   width: 90%
   margin: auto
 
+article
+  overflow: hidden
+
 footer
   margin-top: 2em
   padding: 1.5em 0
